# fraud-detection-api

./: Dockerfile  README.md  gunicorn.py  init.sh  pyproject.toml
app/: app.py
app/modelo/: modelo.pkl
app/schema/: schema.py
data/: test_data.csv
docs/: batch_request.sh  request.sh
notebooks/: 01_data_cleaning.ipynb
tests/: test_prediction.py
