[tool.poetry]
name = "fraud-detection-api"
version = "0.1.0"
description = "An API to detect credit card fraud."
authors = ["Carolina Dias <carolina.dias.ai@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"

[tool.poetry.group.test.dependencies]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
jupyterlab = "*"
pandas = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
