[tool.poetry]
name = "fraud-detection-api"
version = "0.1.0"
description = "An API to detect credit card fraud."
authors = ["Carolina Dias <carolina.dias.ai@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
scikit-learn = "^1.2.2"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"

[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pandas = "^2.0.1"
pytest = "^7.3.1"
xgboost = "^1.7.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
jupyterlab = "*"
pandas = "^2.0.1"
xgboost = "^1.7.5"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
